<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
	    <TextView
	        android:id="@+id/menu_appname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/app_name"
	        android:textColor="#33B5E5"
	        android:textSize="44sp" />
	 
	  <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@drawable/menu_background"
	    android:layout_margin="50dp" >
	    
	
	
	    <Button
		        android:id="@+id/play_button"
		        android:layout_width="fill_parent"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:layout_gravity="center"
		        android:background="@drawable/button_selector"
		        android:textColor="@color/button_text_color"
		        android:text="@string/play" />
	    

	
	  	<Button
		        android:id="@+id/rules_button"
		        android:layout_width="fill_parent"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:layout_gravity="center"
		        android:background="@drawable/button_selector"
		        android:textColor="@color/button_text_color"
		        android:text="@string/rules" />

	    <Button
		        android:id="@+id/game_options_button"
		        android:layout_width="fill_parent"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:layout_gravity="center"
		        android:textColor="@color/button_text_color"
		        android:background="@drawable/button_selector"
		        android:text="@string/game_options" />
	    

	
	   	<Button
		        android:id="@+id/statement_button"
		        android:layout_width="fill_parent"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:layout_gravity="center"
		        android:background="@drawable/button_selector"
		        android:textColor="@color/button_text_color"
		        android:text="@string/statement" />
	    


		</LinearLayout>
</LinearLayout>