<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rules_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textColor="#33B5E5"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />
        
    <View
	    android:id="@+id/rules_separator_top"
		android:layout_width="80dp"
		android:layout_height="2dp"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="2dp"
		android:visibility="visible"
		android:background="#FFFFFF" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:drawSelectorOnTop="false">
    </ListView>
    
    <TextView android:id="@id/android:empty"
               android:layout_width="match_parent"
               android:layout_height="0dip"
               android:layout_weight="1"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:text="@string/app_name"/>    

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >
    <Button
        android:id="@+id/rules_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/button_text_color"
        android:background="@drawable/button_selector"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="1dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/rules_ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/button_text_color"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/button_selector"
        android:text="@string/ok" />
    </LinearLayout>
 
</LinearLayout>